<resources>
    <string name="app_name">PayIO</string>

    <string name="space">&#160;</string>
    <string name="double_space">&#160;&#160;</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="confirm_to_cancel">确认取消</string>
    <string name="confirm_user_known">我知道了</string>
    <string name="think_it_again">我再想想</string>
    <string name="confirm_space">确&#160;&#160;认</string>
    <string name="cancel_space">取&#160;&#160;消</string>
    <string name="tips">提示</string>
    <string name="network_error">网络错误</string>
    <string name="function_not_developed">功能暂未开放</string>
    <string name="search">搜索</string>
    <string name="copy_success">复制成功</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="bankcard">银行卡</string>
    <string name="loading">加载中</string>

    <string name="no_storage_permission">请先开启储存权限</string>
    <string name="no_camera_permission">请先开启相机权限</string>
    <string name="need_storage_permission_to_update">在设置中开启储存权限,才能进行更新</string>
    <string name="check_network">请检查网络是否可用</string>
    <string name="network_no_wifi">手机处于非WiFi状态,请检查手机下载设置</string>
    <string name="app_is_latest_version">已经是最新版本</string>

    <string name="dialog_save_qrcode">保存二维码图片</string>
    <string name="dialog_app_update_title">发现新版本,请及时更新</string>
    <string name="dialog_app_update_info">1.新版本更新的描述新版本更新的描述 \n2.新版本更新的描述 \n3.新版本更新的描述，新版本更新的描述</string>
    <string name="dialog_app_update_progress">下载进度&#160;:&#160;</string>
    <string name="dialog_downloaded_info">应用已下载完成,点确定立即更新</string>
    <string name="dialog_downloaded_info_error">文件下载错误,点击重新下载</string>
    <string name="dialog_downloaded_title">下载完成</string>
    <string name="dialog_downloaded_title_error">下载出错</string>

    <string name="login_title">登录</string>
    <string name="login_user_account">登录账号</string>
    <string name="login_user_password">登录密码</string>
    <string name="login_input_account">请填写手机号</string>
    <string name="login_input_password">请填写登录密码</string>
    <string name="login_button">登&#160;&#160;录</string>
    <string name="login_register">注册</string>
    <string name="login_logining">登录中&#8230;</string>
    <string name="login_error">登录失败</string>
    <string name="login_phone_format_error">请输入正确的手机号</string>
    <string name="login_account_empty_tips">账号不能为空</string>
    <string name="login_password_empty_tips">密码不能为空</string>

    <string name="register_title">注册</string>
    <string name="register_phone_number">手机号</string>
    <string name="register_input_phone_number">请输入手机号</string>
    <string name="register_password">登录密码</string>
    <string name="register_input_password">6~12位数字和字母,区分大小写</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_input_confirm_password">请再次输入密码</string>
    <string name="register_button">注&#160;&#160;册</string>
    <string name="register_account_empty_tips">手机号不能为空</string>
    <string name="register_password_empty_tips">密码不能为空</string>
    <string name="register_phone_format_error">请输入正确的手机号</string>
    <string name="register_password_format_error">密码必须是6&#8211;16位数字字母组合</string>
    <string name="register_password_not_match">两次密码不一致</string>
    <string name="register_registering">注册中&#8230;</string>
    <string name="register_error">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_go_to_login">去登录</string>
    <string name="register_same_password">提示:钱包支付密码与登录密码相同!</string>
    <string name="register_agreed">注册表示同意</string>
    <string name="register_payio_agreement">《PayIO服务协议》</string>

    <string name="main_otc">交易</string>
    <string name="main_order">订单</string>
    <string name="main_wallet">钱包</string>
    <string name="main_user">我的</string>

    <string name="otc_buy">买币</string>
    <string name="otc_sell">卖币</string>
    <string name="otc_pop_create_trade">挂单</string>
    <string name="otc_pop_my_trade">我的挂单</string>
    <string name="otc_new_notification">您有新的通知</string>
    <string name="otc_trade_buy">购买</string>
    <string name="otc_trade_sell">出售</string>
    <string name="otc_trade_success_rate">成交率</string>
    <string name="otc_trade_success_amount">成交</string>
    <string name="otc_trade_currency_limit">限额</string>
    <string name="otc_trade_crypto_limit">数量</string>

    <string name="otc_order">订单</string>
    <string name="otc_order_all">全部</string>
    <string name="otc_order_buy">买单</string>
    <string name="otc_order_sell">卖单</string>
    <string name="otc_order_number">订单号:&#160;</string>

    <string name="order_status_create">已创建</string>
    <string name="order_status_trans">转账中</string>
    <string name="order_status_success">成功</string>
    <string name="order_status_fail">失败</string>

    <string name="wallet_title">钱包</string>
    <string name="wallet_total_assets">总资产 ≈</string>
    <string name="wallet_total_address">地址:</string>
    <string name="wallet_add_token">+Token</string>
    <string name="wallet_wallet_exists">当前只能创建一个钱包</string>
    <string name="wallet_no_wallet_tips">请先点击上方\'+\'创建钱包</string>

    <string name="user_manage_wallet">钱包管理</string>
    <string name="user_receipt_type">收款方式</string>
    <string name="user_about">关于</string>
    <string name="user_update">更新</string>
    <string name="user_setting">设置</string>
    <string name="user_input_name">请输入昵称</string>
    <string name="user_edit_name">修改昵称</string>
    <string name="user_edit_name_error">昵称错误</string>
    <string name="user_edit_name_success">修改昵称成功</string>
    <string name="user_edit_name_too_long">昵称过长</string>
    <string name="user_edit_name_net_error">修改出错</string>
    <string name="user_logout">退出登录</string>
    <string name="user_logout_success">退出成功</string>
    <string name="user_logout_message">是否退出登录</string>
    <string name="user_head_image_uploading">正在上传</string>
    <string name="user_head_image_update_success">头像上传成功</string>
    <string name="user_head_image_update_fail">头像上传失败</string>

    <string name="otc_web_alipay_not_installed">未检测到支付宝客户端,请安装后重试.</string>
    <string name="otc_web_install_alipay">立即安装</string>
    <string name="otc_web_qrcode_error">图片不是正确的收款码</string>
    <string name="otc_web_get_qrcode_failed">图片获取失败</string>
    <string name="otc_web_get_amount_failed">金额获取错误</string>
    <string name="otc_web_qrcode_save_success">二维码图片保存成功</string>
    <string name="otc_web_password_updated_title">修改成功</string>
    <string name="otc_web_password_updated_content">钱包和交易密码已同时修改,请重新登录</string>

    <string name="receive_title">收款</string>
    <string name="receive_input_amount">请输入转入数量</string>
    <string name="receive_scan_tips">扫一扫,转入资产</string>

    <string name="send_title">转账</string>
    <string name="send_currency_amount">请输入转出数量</string>
    <string name="send_currency_address">请输入转出地址</string>
    <string name="send_address_error">地址识别错误</string>
    <string name="send_wallet_not_created">钱包未创建</string>
    <string name="send_currency_error">币种错误</string>
    <string name="send_schema_error">支付信息错误</string>

    <string name="currency_transaction_title">交易记录</string>
    <string name="currency_transaction_receive">收款</string>
    <string name="currency_transaction_send">转账</string>
    <string name="currency_transaction_item_send">转出</string>

    <string name="wallet_pay_success">付款成功啦~</string>
    <string name="wallet_pay_failed">支付失败~</string>
    <string name="wallet_pay_password">请输入钱包密码</string>
    <string name="wallet_pay_wrong_password">密码错误</string>
    <string name="wallet_pay_param_error">参数错误</string>
    <string name="wallet_pay_order_amount">订单金额:</string>
    <string name="wallet_pay_order_quantity">支付金额:</string>
    <string name="wallet_pay_wallet_balance">钱包余额:</string>
    <string name="wallet_pay_balance_not_enough">钱包余额不足</string>

    <string name="qrcode_scan_open_flashlight">轻触照亮</string>
    <string name="qrcode_scan_close_flashlight">轻触关闭</string>
    <string name="about_title">关于</string>

    <string name="appeal_title">提交申诉</string>
    <string name="appeal_upload_tips">上传%1$s转账截图</string>
    <string name="appeal_upload">提&#160;&#160;交</string>
    <string name="appeal_upload_ing">正在提交</string>
    <string name="appeal_upload_success">提交成功</string>
    <string name="appeal_upload_fail">提交失败</string>
    <string name="appeal_upload_order_error">订单错误</string>
    <string name="appeal_upload_image_error">图片不存在</string>
    <string name="appeal_upload_success_message">申诉已提交,请耐心等待客服处理</string>

    <string name="clip_head_image_title">头像剪裁</string>
    <string name="clip_head_image_clip">使用</string>

    <string-array name="otc_order_status">
        <item>-1</item>
        <item>0</item>
        <item>11</item>
        <item>9</item>
        <item>10</item>
        <item>8</item>
    </string-array>

    <string-array name="otc_order_status_type">
        <item>全部</item>
        <item>待付款</item>
        <item>待买家付款</item>
        <item>待卖家确认收款</item>
        <item>待确认收款</item>
        <item>交易完成</item>
    </string-array>
</resources>
