<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dialog_background"
        android:gravity="center">

        <TextView
            android:id="@+id/dialog_update_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/dialog_app_update_title"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/dialog_update_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_update_title"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="11dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/dialog_app_update_info"
            android:textColor="@color/grey_7"
            android:textSize="12dp" />

        <LinearLayout
            android:id="@+id/dialog_update_bottom"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/dialog_update_info"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_updte_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@color/grey_F5"
                android:gravity="center"
                android:text="@string/cancel_space"
                android:textColor="@color/grey_7"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/dialog_updte_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/blue_theme"
                android:gravity="center"
                android:text="@string/confirm_space"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>