<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_F2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/register_title_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/register_title_back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/arr_left_dark" />
            </RelativeLayout>

            <org.payio.customview.TitleTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:gravity="center_vertical"
                android:text="@string/register_title"
                android:textColor="@color/main_tab_text_ed"
                android:textSize="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/grey_F2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/register_phone_number"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/register_phone_number"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/register_input_user_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@+id/register_phone_number"
                android:background="@color/transparent"
                android:hint="@string/register_input_phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_A"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="16dp" />

            <RelativeLayout
                android:id="@+id/register_account_delete_layout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/input_delete" />
            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_F2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/register_password"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/register_password"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@+id/register_password"
                android:background="@color/transparent"
                android:hint="@string/register_input_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_A"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="16dp" />

            <RelativeLayout
                android:id="@+id/register_pwd_delete_layout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/input_delete" />
            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_F2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/register_confirm_password"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/register_confirm_password"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/register_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@+id/register_confirm_password"
                android:background="@color/transparent"
                android:hint="@string/register_input_confirm_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_A"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="16dp" />

            <RelativeLayout
                android:id="@+id/register_confirm_pwd_delete_layout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/input_delete" />
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_blue_background"
            android:gravity="center"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_agreed"
            android:textColor="@color/grey_A"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/register_payio_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_payio_agreement"
            android:textColor="#0074D9"
            android:textSize="12dp" />
    </LinearLayout>
</RelativeLayout>


