<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/dialog_background">

        <LinearLayout
            android:id="@+id/edit_user_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wallet_pay_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_edit_name"
                android:textSize="20dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/input_user_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/edit_user_name_layout"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_border_background"
            android:hint="@string/user_input_name"
            android:maxLength="15"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey_A"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/input_user_name_tip"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/input_user_name"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/pink_theme"
            android:textSize="14dp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@+id/input_user_name_tip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_user_name_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_blue_background"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/edit_user_name_confirm"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_grey_background"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
